crates/mir/tests/fixtures/errors/noesc_storage_escape.fe
struct Esc {
    h: mut u256,
    tag: u256,
}

fn noesc_storage_escape() uses (mut slot: Esc) {
    let mut x: u256 = 0
    let e: Esc = Esc { h: mut x, tag: 0 }
    slot = move e
}
